--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
     "commonjs": true,
     "es2020": true
   },
-  "extends": ["airbnb-base", "airbnb", "prettier", "prettier/react"],
+  "extends": ["airbnb-base"],
   "parserOptions": {
     "ecmaVersion": 11
   },
