--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sprint13",
-  "version": "2.0.2",
-  "description": "REST API проекта Mesto, свяжем его с базой данных",
+  "name": "sprint14",
+  "version": "3.0.0",
+  "description": "Реализуем аутентификацию и авторизацию в проекте Mesto",
   "main": "app.js",
   "scripts": {
     "start": "node app",
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
     "validator": "^13.1.1"
   },
