--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
   "name": "sprint14",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "Реализуем аутентификацию и авторизацию в проекте Mesto",
   "main": "app.js",
   "scripts": {
     "start": "node app",
     "dev": "nodemon app"
   },
-  "author": "",
+  "author": "Elena Kuznetsova",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "celebrate": "^12.1.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
+    "mongoose-unique-validator": "^2.0.3",
     "validator": "^13.1.1"
   },
   "devDependencies": {
