--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sprint14",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "Реализуем аутентификацию и авторизацию в проекте Mesto",
   "main": "app.js",
   "scripts": {
@@ -23,10 +23,7 @@
   "devDependencies": {
     "eslint": "^7.3.1",
     "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.21.2",
-    "nodemon": "^2.0.4",
-    "tslint-config-prettier": "^1.18.0"
+    "nodemon": "^2.0.4"
   }
 }
