--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "body-parser": "^1.19.0",
     "celebrate": "^12.1.2",
     "express": "^4.17.1",
+    "express-winston": "^4.0.5",
+    "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
     "mongoose-unique-validator": "^2.0.3",
-    "validator": "^13.1.1"
+    "validator": "^13.1.1",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "eslint": "^7.3.1",
