--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sprint15",
-  "version": "4.0.1",
-  "description": "Доделаем бэкенд проекта Mesto и задеплоим его",
+  "name": "mesto_api",
+  "version": "4.0.2",
+  "description": "API для проекта Mesto",
   "main": "app.js",
   "scripts": {
     "start": "node app",
